--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <h1 class="h1-header">Join pre-order list</h1>
               <p class="p-info">Enter your information below and be notified when RosnBox is available.</p>
             </div>
-            <form action="https://formsubmit.co/your@email.com" method="POST">
+            <form action="https://formsubmit.co/ericjcili@email.com" method="POST">
               <input type="hidden" name="_subject" value="** New RosnBox Pre Order Information **">
               <input type="text" name="name" required placeholder="Name">
               <input type="email" name="email" required placeholder="Email">
