--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </div>
         </section>
         </div>
-        <div class="contact-form>
+        <div class="contact-form" id="pre-order">
           <section class="row" id="about-sec">
             <div class="col-md-8">
               <h1 class="h1-header">Join pre-order list</h1>
