--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h1 class="animated fadeInUp">UP YOUR GAME</h1>
                     <h2 class="animated fadeInUp">WITH ROSNBOX</h2>
                     <p>A 21st century product that allows baseball players effortless access to Rosin powder, a legal grip enhancing substance, at all times during a game.</p>
-                    <a href="#preorder" class="btn btn-main animated fadeInUp" >PRE ORDER NOW</a>
+                    <a href="#pre-order" class="btn btn-main animated fadeInUp" >PRE ORDER NOW</a>
                 </div>
             </div>
             <div>
@@ -103,7 +103,7 @@
               <h1 class="h1-header">Join pre-order list</h1>
               <p class="p-info">Enter your information below and be notified when RosnBox is available.</p>
             </div>
-            <form action="https://formsubmit.co/ericjcili@email.com" method="POST">
+            <form action="https://formsubmit.co/ericjcili@gmail.com" method="POST">
               <input type="hidden" name="_subject" value="** New RosnBox Pre Order Information **">
               <input type="text" name="name" required placeholder="Name">
               <input type="email" name="email" required placeholder="Email">
