--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
               <input type="text" name="name" required placeholder="Name">
               <input type="email" name="email" required placeholder="Email">
               <input type="text" name="number" required placeholder="Phone Number">
+              <input type="hidden" name="_next" vlaue="https://ericjcili.github.io/rosnbox/thankyou.html">
               <button type="submit">Send</button>
             </form>
           </section>
