--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <input type="email" name="email" required placeholder="Email">
               <input type="text" name="number" required placeholder="Phone Number">
               <input type="hidden" name="_capcha" value="false">
-              <input type="hidden" name="_next" vlaue="https://ericjcili.github.io/rosnbox/thankyou.html">
+              <input type="hidden" name="_next" value="https://ericjcili.github.io/rosnbox/thankyou.html">
               <button type="submit">Send</button>
             </form>
           </section>
