--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Designers Tile</title>
+    <title>RosnBox</title>
 
     <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="plugins/Ionicons/css/ionicons.min.css">
@@ -60,23 +60,13 @@
     </section>
     <div class="about-section">
     <section class="row" id="about-sec">
-      <div class="col-md-8">
+      <div class="col-sm-6">
         <h1 class="h1-header">What is RosnBox?</h1>
         <p class="p-info">The RosnBox is a 21st century product that allows baseball players access to Rosin powder, a legal grip enhancing substance, at all times during a game. The RosnBox is ergonomically designed to be attached to a leather baseball belt, and utilizes wing style belt loops that makes it almost unnoticeable to the player wearing it. </p>
       </div>
-      <div class="col-md-4">
-          <img src="./images/image2.jpeg" style="width: 400px">
-      </div>
-    </section>
-    </div>
-    <div class="about-section2">
-      <section class="row" id="about-sec">
-        <div class="col-md-8">
+        <div class="col-sm-6">
           <h1 class="h1-header">How it works</h1>
           <p class="p-info">The RosnBox has a refillable funnel inside that holds a specific amount of rosin powder. As seen above there is a thumb activated button that opens a window at the bottom of the RosnBox, which when engaged dispenses rosin powder in to your fingertips.  Having direct exposure to actual gum rosin powder blend provides baseball players with a sticky grip enhancing substance that is legal, and far superior than rosin powder from a rosin bag.</p>
-        </div>
-        <div class="col-md-4">
-            <img src="./images/image1.jpeg" style="width: 400px">
         </div>
       </section>
       </div>
@@ -98,19 +88,22 @@
         </section>
         </div>
         <div class="contact-form" id="pre-order">
-          <section class="row" id="about-sec">
-            <div class="col-md-8">
+          <section class="" id="about-sec">
+            <div class="col-md-12">
               <h1 class="h1-header">Join pre-order list</h1>
               <p class="p-info">Enter your information below and be notified when RosnBox is available.</p>
             </div>
-            <form action="https://formsubmit.co/ericjcili@gmail.com" method="POST">
+            <form class="poform" action="https://formsubmit.co/ericjcili@gmail.com" method="POST">
               <input type="hidden" name="_subject" value="** New RosnBox Pre Order Information **">
               <input type="text" name="name" required placeholder="Name">
+              <br>
               <input type="email" name="email" required placeholder="Email">
+              <br>
               <input type="text" name="number" required placeholder="Phone Number">
+              <br>
               <input type="hidden" name="_captcha" value="false">
               <input type="hidden" name="_next" value="https://ericjcili.github.io/rosnbox/thankyou.html">
-              <button type="submit">Send</button>
+              <button type="submit">Submit</button>
             </form>
           </section>
           </div>
