--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
 </head>
 <body id="body">
     <!-- Header-->
@@ -60,15 +61,23 @@
     </section>
     <div class="about-section">
     <section class="row" id="about-sec">
-      <div class="col-sm-6">
+      <div class="col-lg-6">
         <h1 class="h1-header">What is RosnBox?</h1>
         <p class="p-info">The RosnBox is a 21st century product that allows baseball players access to Rosin powder, a legal grip enhancing substance, at all times during a game. The RosnBox is ergonomically designed to be attached to a leather baseball belt, and utilizes wing style belt loops that makes it almost unnoticeable to the player wearing it. </p>
       </div>
-        <div class="col-sm-6">
-          <h1 class="h1-header">How it works</h1>
-          <p class="p-info">The RosnBox has a refillable funnel inside that holds a specific amount of rosin powder. As seen above there is a thumb activated button that opens a window at the bottom of the RosnBox, which when engaged dispenses rosin powder in to your fingertips.  Having direct exposure to actual gum rosin powder blend provides baseball players with a sticky grip enhancing substance that is legal, and far superior than rosin powder from a rosin bag.</p>
+        <div class="col-lg-6">
+          <img class="about-img" src="./images/image2.jpeg" width="70%">
         </div>
       </section>
+      <section class="row">
+        <div class="col-lg-6">
+          <img class="about-img" src="./images/image1.jpeg" width="70%">
+        </div>
+          <div class="col-lg-6">
+            <h1 class="h1-header">How it works</h1>
+            <p class="p-info">The RosnBox has a refillable funnel inside that holds a specific amount of rosin powder. As seen above there is a thumb activated button that opens a window at the bottom of the RosnBox, which when engaged dispenses rosin powder in to your fingertips.  Having direct exposure to actual gum rosin powder blend provides baseball players with a sticky grip enhancing substance that is legal, and far superior than rosin powder from a rosin bag.</p>
+          </div>
+        </section>
       </div>
       <div class="about-section3">
         <section class="row" id="about-sec">
