--- a/index.html
+++ b/index.html
@@ -80,19 +80,16 @@
         </section>
       </div>
       <div class="about-section3">
-        <section class="row" id="about-sec">
-          <div class="col-md-8">
+        <section class="column" id="about-sec">
+          <div class="block">
             <h1 class="h1-header">Why RosnBox?</h1>
-            <li class="why-list">
-              <ul>☆ Let’s all players in different positions have direct access to Rosin powder including infielders, outfielders and even umpires who need to rub up the balls.</ul>
-              <ul>☆ SPEEDS UP THE GAME for pitchers who don’t have to step off the mound multiple times a game to bend over and grab a rosin bag. </ul>
-              <ul>☆ Provides direct rosin powder blend to the hands which is a much more superior grip enhancing effect than rosin from a rosin bag. </ul>
-              <ul>☆ Easy to use and much faster to access. Provides pitchers the ability to stay on tempo, and never leave the mound to get the grip enhancing substance they need. </ul>
-              <ul>☆ Much more fashionable with the ability to interchange logo plates, and rep your team.</ul>
-            </li>
-          </div>
-          <div class="col-md-4">
-              <img src="./images/image3.jpeg" style="width: 400px">
+            <div class="col-md-12">
+              <p class="p-star">☆</p><p class="p-info2"></p>Let’s all players in different positions have direct access to Rosin powder including infielders, outfielders and even umpires who need to rub up the balls.</p>
+              <p class="p-star">☆</p><p class="p-info2"></p>SPEEDS UP THE GAME for pitchers who don’t have to step off the mound multiple times a game to bend over and grab a rosin bag. </p>
+              <p class="p-star">☆</p><p class="p-info2"></p>Provides direct rosin powder blend to the hands which is a much more superior grip enhancing effect than rosin from a rosin bag. </p>
+              <p class="p-star">☆</p><p class="p-info2"></p>Easy to use and much faster to access. Provides pitchers the ability to stay on tempo, and never leave the mound to get the grip enhancing substance they need. </p>
+              <p class="p-star">☆</p><p class="p-info2"></p>Much more fashionable with the ability to interchange logo plates, and rep your team.</p>
+              </div>
           </div>
         </section>
         </div>
