more touches to draft

--- a/thankyou.html
+++ b/thankyou.html
@@ -40,9 +40,11 @@
             </div>
         </div>
     </header>
-    <div class="thankyou" style="padding: 300px;">
-        <h1>Thank You</h1>
-        <h2>Your form has been submitted.</h2>
+    <div class="contact-form" style="padding: 100px;">
+        <h1 class="h1-header" style="margin-bottom: -50px;">Thank You</h1>
+        <br>
+        <p class="p-info">Your form has been submitted.</p>
+        <a href="index.html" class="btn animated fadeInUp" >Return home</a>
     </div>
     <section class="footer1">
         <div class="col-md-4">
