more touches to draft

--- a/thankyou.html
+++ b/thankyou.html
@@ -41,9 +41,9 @@
         </div>
     </header>
     <div class="contact-form" style="padding: 100px;">
-        <h1 class="h1-header" style="margin-bottom: -50px;">Thank You</h1>
+        <h1 class="h1ty-header" style="margin-bottom: -50px;">Thank You</h1>
         <br>
-        <p class="p-info">Your form has been submitted.</p>
+        <p class="pty-info">Your form has been submitted.</p>
         <a href="index.html" class="btn animated fadeInUp" >Return home</a>
     </div>
     <section class="footer1">
