--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 					</button>
                     <div class="collapse navbar-collapse ml-auto" id="navbarsExample09">
 						<ul class="navbar-nav ml-auto">
-              <li class="nav-item @@about"><a class="nav-link" href="#about-sec">About</a></li>
-							<li class="nav-item @@contact"><a class="nav-link" href="#pre-order">Pre-Order</a></li>
+              <li class="nav-item"><a class="nav-link" href="#about-sec">About</a></li>
+							<li class="nav-item "><a class="nav-link" href="#pre-order">Pre-Order</a></li>
 						</ul>
 					</div>
                 </nav>
