more page animations 2

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </header>
     <!-- Hero -->
-    <section class="slider">
+    <section class="slider" id="home">
         <div class="row">
             <div class="col-md-7">
                 <div class="block">
@@ -124,6 +124,12 @@
                 <b>RosnBox</b>
                 <p>All Rights Reserved. Web Design by Eric Jr.</p>
               </div>
+            </div>
+            <div class="col-lg-6"></div>
+            <div class="col-md-2">
+              <a class="nav-bar-brand" href="#home">
+                <img src="images/rosnboxwhite.png" alt="RosnBox Logo" style="height: 50px; float: right; padding-right: 15%;">
+            </a>
             </div>
           </section>
 
