--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <br>
               <input type="hidden" name="_captcha" value="false">
               <input type="hidden" name="_next" value="https://ericjcili.github.io/rosnbox/thankyou.html">
-              <button type="submit">Submit</button>
+              <button type="submit">Submit </button>
             </form>
           </section>
           </div>
@@ -128,7 +128,7 @@
             <div class="col-lg-6"></div>
             <div class="col-md-2">
               <a class="nav-bar-brand" href="#home">
-                <img src="images/rosnboxwhite.png" alt="RosnBox Logo" style="height: 50px; float: right; padding-right: 15%;">
+                <img src="images/rosnboxwhite.png" alt="RosnBox Logo" style="height: 50px; float: right;">
             </a>
             </div>
           </section>
