--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RosnBox</title>
+    <title>Eric J Cili Portfolio</title>
 
     <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="plugins/Ionicons/css/ionicons.min.css">
@@ -12,12 +12,11 @@
     <link rel="stylesheet" href="plugins/magnific-popup/magnific-popup.css">
     <link rel="stylesheet" href="plugins/slick/slick.css">
     <link rel="stylesheet" href="css/style.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,300;0,800;1,200&display=swap" rel="stylesheet">
 </head>
 <body id="body">
     <!-- Header-->
@@ -26,15 +25,17 @@
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg p-0">
                     <a class="nav-bar-brand" href="index.html">
-                        <img src="images/rosnboxwhite.png" alt="RosnBox Logo" style="height: 90px";>
+                        <img src="images/picofme.jpg" alt="RosnBox Logo" style="height: 90px; border-radius: 100px";>
                     </a>
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="ion-android-list"></span>
+						<span class="ion-navicon"></span>
 					</button>
                     <div class="collapse navbar-collapse ml-auto" id="navbarsExample09">
 						<ul class="navbar-nav ml-auto">
-              <li class="nav-item"><a class="nav-link" href="#about-sec">About</a></li>
-							<li class="nav-item "><a class="nav-link" href="#pre-order">Pre-Order</a></li>
+              <li class="nav-item"><a class="nav-link" href="#about-sec">About Me</a></li>
+              <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+              <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+							<li class="nav-item "><a class="nav-link" href="resume.html">Resume</a></li>
 						</ul>
 					</div>
                 </nav>
@@ -44,60 +45,61 @@
     <!-- Hero -->
     <section class="slider" id="home">
         <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-12">
                 <div class="block">
-                    <h1 class="animated fadeInUp">UP YOUR GAME</h1>
-                    <h2 class="animated fadeInUp">WITH ROSNBOX</h2>
-                    <p>A 21st century product that allows baseball players effortless access to Rosin powder, a legal grip enhancing substance, at all times during a game.</p>
-                    <a href="#pre-order" class="btn btn-main animated fadeInUp" >PRE ORDER NOW</a>
+                    <h1 class="animated fadeInUp">Eric J Cili</h1>
+                    <h2 class="animated fadeInUp">Software Engineer, Web Applications</h2>
+                    <p>Dedicated web developer specializing in clean, modern designs utilizing state-of-the-art web technology. Have an inquiry? Contact me!</p>
+                    <a href="#pre-order" class="btn btn-main animated fadeInUp" >Contact</a>
                 </div>
             </div>
-            <div>
-              <div class="bbplayer">
-                  <img class="animated fadeInUp" src="images/bbplayer.png" alt="Baseball player repping RosnBox" height="400px">
-              </div>
-          </div>
         </div>
     </section>
-    <div class="about-section">
-    <section class="row" id="about-sec">
-      <div class="col-lg-6">
-        <h1 class="h1-header">What is RosnBox?</h1>
-        <p class="p-info">The RosnBox is a 21st century product that allows baseball players access to Rosin powder, a legal grip enhancing substance, at all times during a game. The RosnBox is ergonomically designed to be attached to a leather baseball belt, and utilizes wing style belt loops that makes it almost unnoticeable to the player wearing it. </p>
-      </div>
-        <div class="col-lg-6">
-          <img class="about-img" src="./images/image2.jpeg">
-        </div>
-      </section>
-      <section class="row">
-        <div class="col-lg-6">
-          <img class="about-img" src="./images/image1.jpeg">
-        </div>
-          <div class="col-lg-6">
-            <h1 class="h1-header">How it works</h1>
-            <p class="p-info">The RosnBox has a refillable funnel inside that holds a specific amount of rosin powder. As seen above there is a thumb activated button that opens a window at the bottom of the RosnBox, which when engaged dispenses rosin powder in to your fingertips.  Having direct exposure to actual gum rosin powder blend provides baseball players with a sticky grip enhancing substance that is legal, and far superior than rosin powder from a rosin bag.</p>
+    <section class="col-lg-12">
+      <div class="about-me">
+        <div class="block">
+          <h1 class="h1-header"id="about-sec" style="margin-top: 20px; margin-bottom: -20px;">About Me</h1>
+          <p class="p-info">My name is Eric. I'm a dedicated Web Developer with a passion of learning as much as I can in a lifetime. My hobbies include anything to do with computers and art/design. After building my own computer when I was 15, I quickly became enthralled with computer science. I enjoy working with teams, developing relationships with colleagues, and I am always looking to gain new skills to utilize in my work.</p>
+          <p class="p-info" style="margin-top: -30px;">Beyond computers, I also love music, surfing, and hiking outdoors!</p>
+          <div class="row" class="eric-images">
+            <div class="img-col">
+            <img src="./images/eric1.JPG" style="max-height: 200px; max-width: 200px;">
           </div>
-        </section>
-      </div>
-      <div class="about-section3">
-        <section class="column" id="about-sec">
+          <div class="img-col">
+            <img  src="./images/eric2.JPG" style="max-height: 200px; max-width: 200px;">
+          </div>
+          <div class="img-col">
+            <img src="./images/eric3.JPG" style="max-height: 200px; max-width: 200px;">
+          </div>
+          </div>
           <div class="block">
-            <h1 class="h1-header">Why RosnBox?</h1>
-            <div class="col-md-12">
-              <p class="p-star">☆</p><p class="p-info2"></p>Let’s all players in different positions have direct access to Rosin powder including infielders, outfielders and even umpires who need to rub up the balls.</p>
-              <p class="p-star">☆</p><p class="p-info2"></p>SPEEDS UP THE GAME for pitchers who don’t have to step off the mound multiple times a game to bend over and grab a rosin bag. </p>
-              <p class="p-star">☆</p><p class="p-info2"></p>Provides direct rosin powder blend to the hands which is a much more superior grip enhancing effect than rosin from a rosin bag. </p>
-              <p class="p-star">☆</p><p class="p-info2"></p>Easy to use and much faster to access. Provides pitchers the ability to stay on tempo, and never leave the mound to get the grip enhancing substance they need. </p>
-              <p class="p-star">☆</p><p class="p-info2"></p>Much more fashionable with the ability to interchange logo plates, and rep your team.</p>
-              </div>
+            <h1 class="h1-header"id="about-sec" style="margin-top: 20px; margin-bottom: -20px;">Why me?</h1>
+            <p class="p-info">So, why choose me to develop your website? As a freelance web developer I create a more intimate relationship with my clients. I take great pride & value in my clients satisfaction and will go above & beyond to make sure your website fits your exact needs. I also charge significantly lower rates than average big-company web designers, who don't put in personal time to help you with your vision.</p>
+            <p class="p-info" style="margin-top: -30px;">Beyond full website development, I'm also happy to update any existing out-dated website you might have. So, if you want assured quality in your businesses website at an affordable cost, consider contacting me today!</p>
           </div>
-        </section>
         </div>
+      </div>
+    </section>
+    <section class="col-lg-12">
+      <div class="projects" id="projects">
+        <div class="block">
+          <h1 class="h1-header" style="text-align: center;">Projects</h1>
+          <p class="p-info" style="color: var(--white); text-align: center; margin-top: -30px;">Below is a list of projects of real business websites that are live on the web! Click to be re-directed.</p>
+        </div>
+      </div>
+      <div class="project-list">
+        <div class="col-lg-6">
+          <div class="project">
+
+          </div>
+        </div>
+      </div>
+    </section>
         <div class="contact-form" id="pre-order">
           <section class="" id="about-sec">
             <div class="col-md-12">
-              <h1 class="h1-header">Join pre-order list</h1>
-              <p class="p-info">Enter your information below and be notified when RosnBox is available.</p>
+              <h1 class="h1-header">Contact Me</h1>
+              <p class="p-info">Fill out the form below to get a quote on your website idea, ask me any questions, or just say hi! I will typically respond within 1-3 days.</p>
             </div>
             <form class="poform" action="https://formsubmit.co/ericjcili@gmail.com" method="POST">
               <input type="hidden" name="_subject" value="** New RosnBox Pre Order Information **">
@@ -105,30 +107,28 @@
               <br>
               <input type="email" name="email" required placeholder="Email">
               <br>
-              <input type="text" name="number" required placeholder="Phone Number">
+              <input class="message-container" type="text" name="Message" required placeholder="Message" style="height: 100px;">
               <br>
               <input type="hidden" name="_captcha" value="false">
               <input type="hidden" name="_next" value="https://ericjcili.github.io/rosnbox/thankyou.html">
-              <button type="submit">Submit </button>
+              <button class="btn btn-main" type="submit">Send</button>
             </form>
           </section>
           </div>
 
-          <!-- Service Start -->
           <section class="footer1">
             <div class="col-md-4">
               <div class="copyright-info">
               </div>
               <div class="copyright-cr">
-                <p>Copyright © 2022<br></p>
-                <b>RosnBox</b>
-                <p>All Rights Reserved. Web Design by Eric Jr.</p>
+                <b>Eric J Cili</b>
+                <p>Web Design by Eric Jr.</p>
               </div>
             </div>
             <div class="col-lg-6"></div>
             <div class="col-md-2">
               <a class="nav-bar-brand" href="#home">
-                <img src="images/rosnboxwhite.png" alt="RosnBox Logo" style="height: 50px; float: right;">
+                <img src="images/ericlogo.png" alt="Eric Cili's logo" style="height: 50px; float: right;">
             </a>
             </div>
           </section>
