--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <h1 class="animated fadeInUp">Eric J Cili</h1>
                     <h2 class="animated fadeInUp">Software Engineer, Web Applications</h2>
                     <p>Dedicated web developer specializing in clean, modern designs utilizing state-of-the-art web technology. Have an inquiry? Contact me!</p>
-                    <a href="#pre-order" class="btn btn-main animated fadeInUp" >Contact</a>
+                    <a href="#contact" class="btn btn-main animated fadeInUp" >Contact</a>
                 </div>
             </div>
         </div>
@@ -77,6 +77,52 @@
             <p class="p-info">So, why choose me to develop your website? As a freelance web developer I create a more intimate relationship with my clients. I take great pride & value in my clients satisfaction and will go above & beyond to make sure your website fits your exact needs. I also charge significantly lower rates than average big-company web designers, who don't put in personal time to help you with your vision.</p>
             <p class="p-info" style="margin-top: -30px;">Beyond full website development, I'm also happy to update any existing out-dated website you might have. So, if you want assured quality in your businesses website at an affordable cost, consider contacting me today!</p>
           </div>
+          <div class="block">
+            <h1 class="h1-header">My skills:</h1>
+            <p class="p-info" style="margin-top: -40px; font-style: italic;">For a more detailed look at my skills, check out <a href="resume.html"><u>my resume.</u></a></p>
+            <div class="skills" style="margin-bottom: 45px;">
+            <div class="row">
+              <div class="col-sm">
+                <li>JavaScript (Intermediate)</li>
+              </div>
+              <div class="col-sm">
+                <li>React (Intermediate)</li>
+              </div>
+          </div>
+          <div class="row">
+            <div class="col-sm">
+              <li>HTML (Advanced)</li>
+            </div>
+            <div class="col-sm">
+              <li>CSS (Advanced)</li>
+            </div>
+        </div>
+        <div class="row">
+          <div class="col-sm">
+            <li>Node.js (Intermediate)</li>
+          </div>
+          <div class="col-sm">
+            <li>Express.js (Intermediate)</li>
+          </div>
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <li>MongoDB/SQL/NoSQL (Intermediate)</li>
+        </div>
+        <div class="col-sm">
+          <li>Handlebars.js (Intermediate)</li>
+        </div>
+    </div>
+    <div class="row">
+      <div class="col-sm">
+        <li>Git (Advanced)</li>
+      </div>
+      <div class="col-sm">
+        <li>npm (Advanced)</li>
+      </div>
+  </div>
+      </div>
+          </div>
         </div>
       </div>
     </section>
@@ -86,16 +132,57 @@
           <h1 class="h1-header" style="text-align: center;">Projects</h1>
           <p class="p-info" style="color: var(--white); text-align: center; margin-top: -30px;">Below is a list of projects of real business websites that are live on the web! Click to be re-directed.</p>
         </div>
-      </div>
       <div class="project-list">
-        <div class="col-lg-6">
-          <div class="project">
-
+        <div class="row">
+          <div class="col-md">
+            <div onclick="window.open('https://padredilg.github.io/decide-eat/index.html','mywindow');" style="cursor: pointer;">&nbsp;
+            <div class="project">
+              <img src="./images/projects/1.jpg">
+              <h1 class="project-h1">Decide Eat</h1>
+              <p class="project-p">This was the first major project that I did in my coding bootcamp. Here, we use HTML and CSS for a beautiful, professional website design. We also used Web-APIs to search information from external databases!</p>
+            </div>
+          </div>
+          </div>
+          <div class="col-md">
+            <div onclick="window.open('https://designerstile.com/','mywindow');" style="cursor: pointer;">&nbsp;
+            <div class="project">
+              <img src="./images/projects/2.jpg">
+              <h1 class="project-h1">Designer's Tile</h1>
+              <p class="project-p">Officially making me a professional web designer, I was hired to upgrade the company's website by hand-coding and designing. The result is a clean, user-friendly business website.</p>
+            </div>
+          </div>
+          </div>
+          <div class="col-md">
+            <div onclick="window.open('https://magictouchautocare.com/?page=home','mywindow');" style="cursor: pointer;">&nbsp;
+            <div class="project">
+              <img src="./images/projects/3.jpg">
+              <h1 class="project-h1">Magic Touch Auto Care</h1>
+              <p class="project-p">This care wash company hired me to update their outdated business site. In a short matter of time, their website was revamped with modern technologies and updated page information.</p>
+            </div>
+          </div>
+          </div>
+          <div class="col-md">
+            <div>
+            <div class="project">
+              <img src="./images/projects/4.jpg">
+              <h1 class="project-h1">RosnBox</h1>
+              <p class="project-p">An entrepreneur reached out to me to make a website for one of his latest invensions: a rosin dispensar for baseball players. I provided him with a clean & bold web page that attracted the eyes of many sellers.</p>
+            </div>
+          </div>
+          </div>
+          <div class="col-md">
+            <div onclick="window.open('https://progrum.herokuapp.com/','mywindow');" style="cursor: pointer;">&nbsp;
+            <div class="project">
+              <img src="./images/projects/5.jpg">
+              <h1 class="project-h1">Progrum</h1>
+              <p class="project-p">This was the second major project in my coding bootcamp. Don't be fooled by its simple design, this website uses MySQL as a database to store user data including username, email, password, posts and comments. A simple, easy-to-use forum website for programmers.</p>
+            </div>
+          </div>
           </div>
         </div>
       </div>
     </section>
-        <div class="contact-form" id="pre-order">
+        <div class="contact-form" id="contact">
           <section class="" id="about-sec">
             <div class="col-md-12">
               <h1 class="h1-header">Contact Me</h1>
