--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
           <p class="p-info" style="margin-top: -30px;">Beyond computers, I also love music, surfing, and hiking outdoors!</p>
           <div class="row" class="eric-images">
             <div class="img-col">
-            <img src="./images/eric1.JPG" style="max-height: 200px; max-width: 200px;">
+            <img src="./images/eric1.jpg" style="max-height: 200px; max-width: 200px;">
           </div>
           <div class="img-col">
-            <img  src="./images/eric2.JPG" style="max-height: 200px; max-width: 200px;">
+            <img  src="./images/eric2.jpg" style="max-height: 200px; max-width: 200px;">
           </div>
           <div class="img-col">
-            <img src="./images/eric3.JPG" style="max-height: 200px; max-width: 200px;">
+            <img src="./images/eric3.jpg" style="max-height: 200px; max-width: 200px;">
           </div>
           </div>
           <div class="block">
