--- a/thankyou.html
+++ b/thankyou.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Designers Tile</title>
+    <title>Eric J Cili Portfolio</title>
 
     <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="plugins/Ionicons/css/ionicons.min.css">
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="plugins/magnific-popup/magnific-popup.css">
     <link rel="stylesheet" href="plugins/slick/slick.css">
     <link rel="stylesheet" href="css/style.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,300;0,800;1,200&display=swap" rel="stylesheet">
 </head>
 <body id="body">
     <!-- Header-->
@@ -25,15 +25,17 @@
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg p-0">
                     <a class="nav-bar-brand" href="index.html">
-                        <img src="images/rosnboxwhite.png" alt="RosnBox Logo" style="height: 90px";>
+                        <img src="./images/PicOfMe.jpg" alt="RosnBox Logo" style="height: 90px; border-radius: 100px";>
                     </a>
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="ion-android-list"></span>
+						<span class="ion-navicon"></span>
 					</button>
                     <div class="collapse navbar-collapse ml-auto" id="navbarsExample09">
 						<ul class="navbar-nav ml-auto">
-              <li class="nav-item @@about"><a class="nav-link" href="index.html#about-sec">About</a></li>
-							<li class="nav-item @@contact"><a class="nav-link" href="index.html#pre-order">Pre-Order</a></li>
+              <li class="nav-item"><a class="nav-link" href="#about-sec">About Me</a></li>
+              <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+              <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+							<li class="nav-item "><a class="nav-link" href="resume.html">Resume</a></li>
 						</ul>
 					</div>
                 </nav>
@@ -41,24 +43,29 @@
         </div>
     </header>
     <div class="contact-form" style="padding: 100px;">
-        <h1 class="h1ty-header" style="margin-bottom: -50px;">Thank You</h1>
+        <h1 class="h1-header" style="margin-bottom: -50px;">Thank You</h1>
         <br>
-        <p class="pty-info">Your form has been submitted.</p>
-        <a href="index.html" class="btn animated fadeInUp" >Return home</a>
+        <p class="p-info">Your form has been submitted.</p>
+        <a href="index.html" class="btn btn-main animated fadeInUp" >Return home</a>
     </div>
     <section class="footer1">
         <div class="col-md-4">
           <div class="copyright-info">
           </div>
           <div class="copyright-cr">
-            <p>Copyright © 2022<br></p>
-            <b>RosnBox</b>
-            <p>All Rights Reserved. Web Design by Eric Jr.</p>
+            <b>Eric J Cili</b>
+            <p>Web Design by Eric Jr.</p>
           </div>
+        </div>
+        <div class="col-lg-6"></div>
+        <div class="col-md-2">
+          <a class="nav-bar-brand" href="#home">
+            <img src="images/ericlogo.png" alt="Eric Cili's logo" style="height: 50px; float: right;">
+        </a>
         </div>
       </section>
 
-</body>
+</section>
 <!-- Main jQuery -->
 <script src="plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 3.1 -->
@@ -74,3 +81,5 @@
 <script src="plugins/google-map/map.js"></script>
 
 <script src="js/script.js"></script>
+
+</body>
