--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg p-0">
                     <a class="nav-bar-brand" href="index.html">
-                        <img src="images/picofme.jpg" alt="RosnBox Logo" style="height: 90px; border-radius: 100px";>
+                        <img src="./images/PicOfMe.jpg" alt="Great Pic of Eric Cili" style="height: 90px; border-radius: 100px";>
                     </a>
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="ion-navicon"></span>
