--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
               <input class="message-container" type="text" name="Message" required placeholder="Message" style="height: 100px;">
               <br>
               <input type="hidden" name="_captcha" value="false">
-              <input type="hidden" name="_next" value="https://ericjcili.github.io/rosnbox/thankyou.html">
+              <input type="hidden" name="_next" value="https://ericjcili.github.io/2022portfolio/thankyou.html">
               <button class="btn btn-main" type="submit">Send</button>
             </form>
           </section>
