--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     <!-- Hero -->
     <section class="slider" id="home">
-        <div class="row">
+        <div class="row" style="padding: 30px;">
             <div class="col-md-12">
                 <div class="block">
                     <h1 class="animated fadeInUp">Eric J Cili</h1>
