--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="project">
               <img src="./images/projects/4.jpg">
               <h1 class="project-h1">RosnBox</h1>
-              <p class="project-p">An entrepreneur reached out to me to make a website for one of his latest invensions: a rosin dispensar for baseball players. I provided him with a clean & bold web page that attracted the eyes of many sellers.</p>
+              <p class="project-p">An entrepreneur reached out to me to make a website for one of his latest inventions: a rosin dispenser for baseball players. I provided him with a clean & bold web page that attracted the eyes of many sellers.</p>
             </div>
           </div>
           </div>
