added resume button

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                     <h2 class="animated fadeInUp">Software Engineer, Web Applications</h2>
                     <p>Dedicated web developer specializing in clean, modern designs utilizing state-of-the-art web technology. Have an inquiry? Contact me!</p>
                     <a href="#contact" class="btn btn-main animated fadeInUp" >Contact</a>
+                    <a href="resume.html" class="btn btn-main animated fadeInUp" >Resume</a>
+
                 </div>
             </div>
         </div>
