fixed slider text

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="block">
                     <h1 class="animated fadeInUp">Eric J Cili</h1>
                     <h2 class="animated fadeInUp">Software Engineer, Web Applications</h2>
-                    <p>Dedicated web developer specializing in clean, modern designs utilizing state-of-the-art web technology. Have an inquiry? Contact me!</p>
+                    <p class="p-info">Dedicated web developer specializing in clean, modern designs utilizing state-of-the-art web technology. Have an inquiry? Contact me!</p>
                     <a href="#contact" class="btn btn-main animated fadeInUp" >Contact</a>
                     <a href="resume.html" class="btn btn-main animated fadeInUp" >Resume</a>
 
