--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
         </div>
       </div>
     </section>
-    <section class="col-lg-12">
+    <section class="col-lg-12 text-center">
       <div class="projects" id="projects">
         <div class="block">
-          <h1 class="h1-header" style="text-align: center;">Projects</h1>
+          <h1 class="h1-header" style="text-align: center; color: var(--white);">Projects</h1>
           <p class="p-info" style="color: var(--white); text-align: center; margin-top: -30px;">Below is a list of projects of real business websites that are live on the web! Click to be re-directed.</p>
         </div>
       <div class="project-list">
@@ -164,7 +164,7 @@
           </div>
           </div>
           <div class="col-md">
-            <div>
+            <div onclick="window.open('https://magictouchautocare.com/?page=home','mywindow');" style="cursor: pointer;">&nbsp;
             <div class="project">
               <img src="./images/projects/4.jpg">
               <h1 class="project-h1">RosnBox</h1>
@@ -178,6 +178,15 @@
               <img src="./images/projects/5.jpg">
               <h1 class="project-h1">Progrum</h1>
               <p class="project-p">This was the second major project in my coding bootcamp. Don't be fooled by its simple design, this website uses MySQL as a database to store user data including username, email, password, posts and comments. A simple, easy-to-use forum website for programmers.</p>
+            </div>
+          </div>
+          </div>
+          <div class="col-md">
+            <div onclick="window.open('https://lightworkzkeys.com','mywindow');" style="cursor: pointer;">&nbsp;
+            <div class="project">
+              <img src="./images/projects/6.jpg">
+              <h1 class="project-h1">Light Workz</h1>
+              <p class="project-p">A business website for a friend who specializes in outdoor lighting design. His website utilizes an Instagram API that catches all of his post data, displaying it in a stylized gallery on the homepage.</p>
             </div>
           </div>
           </div>
