--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="project">
               <img src="./images/projects/3.jpg">
               <h1 class="project-h1">Magic Touch Auto Care</h1>
-              <p class="project-p">This care wash company hired me to update their outdated business site. In a short matter of time, their website was revamped with modern technologies and updated page information.</p>
+              <p class="project-p">This car detailing company hired me to update their outdated business site. In a short matter of time, their website was revamped with modern technologies and updated page information.</p>
             </div>
           </div>
           </div>
@@ -173,11 +173,11 @@
           </div>
           </div>
           <div class="col-md">
-            <div onclick="window.open('https://progrum.herokuapp.com/','mywindow');" style="cursor: pointer;">&nbsp;
+            <div onclick="window.open('https://nextepisodesports.com','mywindow');" style="cursor: pointer;">&nbsp;
             <div class="project">
-              <img src="./images/projects/5.jpg">
-              <h1 class="project-h1">Progrum</h1>
-              <p class="project-p">This was the second major project in my coding bootcamp. Don't be fooled by its simple design, this website uses MySQL as a database to store user data including username, email, password, posts and comments. A simple, easy-to-use forum website for programmers.</p>
+              <img src="./images/projects/7.jpg">
+              <h1 class="project-h1">Next Episode Sports Agency</h1>
+              <p class="project-p">An intricate website for one of my client's sports agency business. This website utlizises a MySQL database to store user data for admin login & profile, post data for their online blog forum, and athlete data to easily keep their website up-to-date.</p>
             </div>
           </div>
           </div>
