--- a/index.html
+++ b/index.html
@@ -190,6 +190,15 @@
             </div>
           </div>
           </div>
+          <div class="col-md">
+            <div onclick="window.open('https://emeraldcoastroofcoatings.com','mywindow');" style="cursor: pointer;">&nbsp;
+            <div class="project">
+              <img src="./images/projects/8.png">
+              <h1 class="project-h1">Emerald Coast Roof Coatings</h1>
+              <p class="project-p">A business owner contacted me to create & host a WordPress website for him. The result is a visually appealing website with optimal functionality, and most importantly gives his business a presence on the web. While working on this website I learned the ins-and-outs of WordPress website making.</p>
+            </div>
+          </div>
+          </div>
         </div>
       </div>
     </section>
